kubernetes/catalog/searxng/manifests/deployment.yaml
---
# Generated by InfraWeaver Community Apps from Unraid AppFeed
# Source: https://raw.githubusercontent.com/kilrah/unraid-docker-templates/main/templates/searxng.xml
# Category: Productivity, Other
# Stars: 176 | Downloads: 46230240
apiVersion: apps/v1
kind: Deployment
metadata:
  name: searxng
  namespace: searxng
  labels:
    app.kubernetes.io/name: searxng
    app.kubernetes.io/managed-by: infraweaver
    infraweaver.io/source: community-apps
    infraweaver.io/tier: simple
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app.kubernetes.io/name: searxng
  template:
    metadata:
      labels:
        app.kubernetes.io/name: searxng
    spec:
      securityContext:
        fsGroup: 1000
      containers:
        - name: searxng
          image: searxng/searxng
          ports:
            - containerPort: 8080
              protocol: TCP
              name: port
          startupProbe:
            tcpSocket:
              port: 8080
            initialDelaySeconds: 5
            periodSeconds: 5
            failureThreshold: 120
          readinessProbe:
            tcpSocket:
              port: 8080
            periodSeconds: 10
            failureThreshold: 3
          livenessProbe:
            tcpSocket:
              port: 8080
            periodSeconds: 30
            failureThreshold: 3
          volumeMounts:
            - name: searxng-data-0
              mountPath: "/etc/searxng"
          resources:
            requests:
              memory: "64Mi"
              cpu: "50m"
            limits:
              memory: "512Mi"
              cpu: "500m"
      volumes:
      - name: searxng-data-0
        persistentVolumeClaim:
          claimName: searxng-data-0
---
apiVersion: v1
kind: Service
metadata:
  name: searxng
  namespace: searxng
  labels:
    app.kubernetes.io/name: searxng
    infraweaver.io/source: community-apps
spec:
  selector:
    app.kubernetes.io/name: searxng
  ports:
    - port: 8080
      targetPort: 8080
      protocol: TCP
      name: port
  type: ClusterIP
