kubernetes/catalog/searxng/manifests/ingressroute.yaml
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: searxng
  namespace: searxng
  labels:
    app.kubernetes.io/name: searxng
    infraweaver.io/source: community-apps
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`searxng.int.${BASE_DOMAIN}`)
      kind: Rule
      middlewares:
        - name: netbird-vpn-only
          namespace: traefik
      services:
        - name: searxng
          port: 8080
  tls:
    store:
      name: default
      namespace: traefik
